--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
 
     <string name="app_name">Wallet</string>
+    <string name="closeDrawer">Close navigation drawer</string>
+    <string name="OpenDrawer">Open navigation drawer</string>
+    <string name="name">Name</string>
+    <string name="score">Score</string>
 
 </resources>
